When the pref "mail.strictly_mime_headers" is off, send as mail charset instead of UTF-8, bug 68394, r=ducarroz,sr=bienvenu.